<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorse"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_user_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_cai"
            android:layout_marginLeft="40dp"
            />
        <ImageView
            android:src="@mipmap/ic_normal_dot_left"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginLeft="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/wei"
                android:gravity="center"
                android:src="@mipmap/ic_user_property_money"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_below="@id/wei"
                android:text="@string/app_yu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="100dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/dai"
                android:src="@mipmap/ic_user_property_card"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_yu2"
                android:layout_below="@id/dai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="200dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="8dp"
                android:id="@+id/shou"
                android:src="@mipmap/ic_user_property_vouchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_yu3"
                android:layout_below="@id/shou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="300dp"
            android:gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ping"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/ic_user_property_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_yu4"
                android:layout_below="@id/ping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/tui"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/ic_user_property_integral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_yu5"
                android:layout_below="@id/tui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
    <include
        layout="@layout/shouhuo"
        >

    </include>
</LinearLayout>
