<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorse"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_user_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_ding"
            android:layout_marginLeft="40dp"
            />
        <ImageView
            android:src="@mipmap/ic_normal_dot_left"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginLeft="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/wei"
                android:gravity="center"
                android:src="@mipmap/ic_user_order_wait_pay"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/weifukuan"
                android:layout_below="@id/wei"
                android:text="@string/app_wei1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="80dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/dai"
                android:src="@mipmap/ic_user_order_wait_drive"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_wei2"
                android:layout_below="@id/dai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="150dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="8dp"
                android:id="@+id/shou"
                android:src="@mipmap/ic_user_order_wait_receipt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_wei3"
                android:layout_below="@id/shou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="220dp"
            android:gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ping"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/ic_user_order_wait_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_wei4"
                android:layout_below="@id/ping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/tui"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/ic_user_order_wait_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_wei5"
                android:layout_below="@id/tui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>
    <include
        layout="@layout/wode"
        >
    </include>
</LinearLayout>
