<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/re"
        android:background="@color/colorba1"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <Button
            android:text="陈童"
            android:id="@+id/tui"
            android:textColor="@android:color/white"
            android:background="@color/colorba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/yong"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_default_user_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_below="@id/yong"
            android:text="未登录"
            android:id="@+id/wei"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorse"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/colorba2"
        android:layout_width="wrap_content"
        android:layout_height="60dp">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                style="@style/tupian"
                android:src="@mipmap/ic_collection_goods"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorse"
                android:layout_marginTop="10dp"
                android:text="@string/app_shang"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="150dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                style="@style/tupian"
                android:src="@mipmap/ic_collection_store"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/colorse"
                android:layout_marginTop="10dp"
                android:text="@string/app_dian"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                style="@style/tupian"
                android:src="@mipmap/ic_user_footprint"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/colorse"
                android:layout_marginTop="10dp"
                android:text="@string/app_wo"
                />
        </LinearLayout>
    </RelativeLayout>
    <include
        layout="@layout/quanbu"
        >
    </include>

</LinearLayout>
